# alda

./: CMakeLists.txt  alda-config.cmake.in  files.txt
examples/: CMakeLists.txt  dr1.cpp
include/alda/: endianness.hpp  exception.hpp  exception_fwd.hpp  log_context.hpp  log_location.hpp  logger.hpp  smallest_uint.hpp  type_enum.hpp  type_enum_fcppt.hpp  type_enum_fcppt_fwd.hpp  type_enum_fwd.hpp
include/alda/bindings/: array.hpp  array_decl.hpp  array_fwd.hpp  bitfield.hpp  bitfield_decl.hpp  bitfield_fwd.hpp  bool.hpp  bool_decl.hpp  bool_fwd.hpp  class.hpp  class_decl.hpp  class_fwd.hpp  duration.hpp  duration_decl.hpp  duration_fwd.hpp  dynamic_len.hpp  dynamic_len_decl.hpp  dynamic_len_fwd.hpp  enum.hpp  enum_array.hpp  enum_array_decl.hpp  enum_array_fwd.hpp  enum_decl.hpp  enum_fwd.hpp  float.hpp  float_decl.hpp  float_fwd.hpp  float_type.hpp  fundamental.hpp  fundamental_decl.hpp  fundamental_fwd.hpp  fundamental_strong.hpp  fundamental_strong_decl.hpp  fundamental_strong_fwd.hpp  invalid_variant.hpp  length_count_policy.hpp  length_count_policy_fwd.hpp  optional.hpp  optional_decl.hpp  optional_fwd.hpp  (+24 more)
include/alda/call/: default_callback.hpp  default_function.hpp  friend_dispatcher.hpp  object.hpp  object_decl.hpp  object_fwd.hpp  object_impl.hpp
include/alda/detail/: class_symbol.hpp  export_external_class_instantiation.hpp  export_external_function_instantiation.hpp  external_class_symbol.hpp  external_symbol.hpp
include/alda/message/: base_decl.hpp  base_fwd.hpp  base_unique_ptr.hpp  concrete_decl.hpp  concrete_fwd.hpp  declare_base.hpp  declare_concrete.hpp  element_type.hpp  get.hpp  id_binding.hpp  id_binding_decl.hpp  id_binding_fwd.hpp  init_record.hpp  instantiate_base.hpp  instantiate_concrete.hpp  is_object.hpp  is_record.hpp  make_class.hpp  make_class_fwd.hpp  make_concrete_ptr.hpp  make_id.hpp  make_id_fwd.hpp  object.hpp  object_decl.hpp  object_fwd.hpp  object_impl.hpp  object_to_buffer.hpp  optional_base_unique_ptr.hpp  optional_base_unique_ptr_fwd.hpp  record.hpp  record_decl.hpp  record_fwd.hpp  record_impl.hpp
include/alda/net/: exception.hpp  host.hpp  id.hpp  io_service_wrapper.hpp  log_location.hpp  parameters.hpp  port.hpp  size_type.hpp
include/alda/raw/: buffer.hpp  buffer_fwd.hpp  combine_static_sizes.hpp  const_pointer.hpp  data.hpp  dispatch_type.hpp  dispatch_value.hpp  element_type.hpp  element_type_tpl.hpp  get.hpp  integral_size.hpp  is_static_size.hpp  is_static_size_v.hpp  make_generic.hpp  needed_size.hpp  needed_size_static.hpp  place.hpp  place_and_update.hpp  pointer.hpp  record.hpp  record_binding.hpp  record_comparison.hpp  record_decl.hpp  record_fwd.hpp  record_impl.hpp  record_output.hpp  record_to_buffer.hpp  record_variadic.hpp  record_variadic_fwd.hpp  size_type.hpp  (+5 more)
net/: CMakeLists.txt  files.txt
net/impl/include/alda/impl/net/client/detail/: object_impl.hpp
net/impl/include/alda/impl/net/server/detail/: connection.hpp  object_impl.hpp
net/impl/src/net/client/detail/: object_impl.cpp
net/impl/src/net/server/detail/: connection.cpp  object_impl.cpp
net/include/alda/net/: host.hpp  id.hpp  io_service_wrapper.hpp  io_service_wrapper_fwd.hpp  log_location.hpp  parameters.hpp  parameters_fwd.hpp  port.hpp  port_fwd.hpp  size_type.hpp  value_type.hpp
net/include/alda/net/buffer/: max_receive_size.hpp  max_send_size.hpp
net/include/alda/net/buffer/circular_receive/: extract_message.hpp  for_asio.hpp  part.hpp  part_fwd.hpp  streambuf.hpp  streambuf_fwd.hpp
net/include/alda/net/buffer/circular_send/: optional_streambuf_ref.hpp  optional_streambuf_ref_fwd.hpp  put_message.hpp  streambuf.hpp  streambuf_fwd.hpp
net/include/alda/net/client/: connect_callback.hpp  connect_function.hpp  data_callback.hpp  data_function.hpp  error_callback.hpp  error_function.hpp  object.hpp  object_fwd.hpp
net/include/alda/net/client/detail/: object_impl_fwd.hpp
net/include/alda/net/server/: connect_callback.hpp  connect_function.hpp  connection_id_container.hpp  data_callback.hpp  data_function.hpp  disconnect_callback.hpp  disconnect_function.hpp  object.hpp  object_fwd.hpp
net/include/alda/net/server/detail/: connection_container.hpp  connection_fwd.hpp  connection_unique_ptr.hpp  object_impl_fwd.hpp
net/src/net/: io_service_wrapper.cpp  log_location.cpp  parameters.cpp
net/src/net/buffer/circular_receive/: for_asio.cpp  part.cpp  streambuf.cpp
net/src/net/buffer/circular_send/: streambuf.cpp
net/src/net/client/: object.cpp
net/src/net/server/: object.cpp
src/: CMakeLists.txt  exception.cpp  log_context.cpp  log_location.cpp  log_parameters.cpp  logger.cpp
src/bindings/: float.cpp  invalid_variant.cpp
src/include/alda/src/: log_parameters.hpp
src/include/alda/src/net/client/detail/: object_impl.hpp
src/include/alda/src/net/server/detail/: connection.hpp  object_impl.hpp
src/net/: io_service_wrapper.cpp  log_location.cpp  parameters.cpp
src/net/buffer/circular_receive/: for_asio.cpp  object.cpp  part.cpp  source.cpp  streambuf.cpp
src/net/buffer/circular_send/: object.cpp  sink.cpp  streambuf.cpp
src/net/client/: object.cpp
src/net/client/detail/: object_impl.cpp
src/net/server/: object.cpp
src/net/server/detail/: connection.cpp  object_impl.cpp
src/raw/stream/: error.cpp  error_output.cpp  failure.cpp  int_error.cpp  int_error_kind_to_string.cpp
tests/: CMakeLists.txt  array.cpp  bitfield.cpp  dispatch.cpp  duration.cpp  dynamic_len.cpp  enum.cpp  enum_array.cpp  float.cpp  length_stream.cpp  optional.cpp  record.cpp  signed.cpp  simple.cpp  smallest_uint.cpp  static.cpp  strong_typedef.cpp  variant.cpp
tests/bindings/: array.cpp  bitfield.cpp  duration.cpp  dynamic_len.cpp  enum.cpp  enum_array.cpp  float.cpp  optional.cpp  record.cpp  signed.cpp  static.cpp  strong_typedef.cpp  unit.cpp  variant.cpp
tests/message/: record.cpp
tests/raw/: combine_static_sizes.cpp  nested.cpp  record.cpp  stream.cpp
tests/serialization/: dispatch.cpp  length_stream.cpp
util/: check_includes.sh  license_paths.json  license_template.hpp  prettify_includes.sh  update_cmake.sh
(+150 files in other folders)
